[package]
name = "hello_remote_world"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
tower = { version = "0.4", features = ["full"] }
http-body-util = "0.1"
futures-util = "0.3.30"
anyhow = "1.0"
home = "0.5.9"

[dev-dependencies]
anyhow = "1"

[package.metadata.scripts]
run = "cargo run -q"
check = "cargo check"
build = "cargo build"
release = "cargo build --release"